# LedgerApp_v2

./: .dockerignore  .gitignore  .railway.toml  CORRECTED_category_py_FINAL.md  Dockerfile  FAMILY_SWITCHER_UX.md  README.md  alembic.ini  pyproject.toml  requirements.txt  uv-lock.txt
alembic/: env.py
alembic/versions/: 914947d4d8c7_create_complete_finance_schema.py  9380119a1fda_add_user_relationships.py  a2b4f79cbd5e_initial_schema_users_table.py  bf90b5db348a_update_model_relationships.py  ea00cdafdd77_rename_date_to_t_date.py
app/: database.py  main.py
app/models/: __init__.py  asset.py  budget.py  category.py  credit_source.py  family.py  financial_goal.py  income_stream.py  invite.py  merchant_category.py  tag.py  transaction.py  user.py
app/routers/: __init__.py  auth.py  budgets.py  categories.py  credit_sources.py  family.py  transactions.py
app/schemas/: __init__.py  budget.py  credit_source.py  invite.py  transaction.py  user.py
app/utils/: email.py  export.py  google_oauth.py  security.py
scripts/: backfill_families.py  seed_categories.py  seed_mcc_codes.py
static/: dark-mode.js  family-switcher.js
templates/: auth_callback.html  auth_success.html  budgets.html  credit_sources.html  dashboard.html  families.html  login.html  transactions.html
