[project]
name = "ledgerapp-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "annotated-types==0.7.0",
    "anyio==3.7.1",
    "async-timeout==5.0.1",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "brotli==1.2.0",
    "cachetools==5.5.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "cryptography==46.0.3",
    "cssselect2==0.8.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "et-xmlfile==2.0.0",
    "fastapi==0.104.1",
    "fonttools==4.60.1",
    "google-auth==2.25.2",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "html5lib==1.1",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2==3.1.2",
    "mako==1.3.10",
    "markupsafe==3.0.3",
    "numpy==1.26.4",
    "oauthlib==3.3.1",
    "openpyxl==3.1.2",
    "pandas==2.1.4",
    "passlib==1.7.4",
    "pillow==12.0.0",
    "pip==25.3",
    "psycopg2-binary==2.9.9",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.23",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.1.0",
    "pydyf==0.11.0",
    "pyparsing==3.2.5",
    "pyphen==0.17.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "python-jose==3.3.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "rsa==4.9.1",
    "setuptools==65.5.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.23",
    "starlette==0.27.0",
    "tinycss2==1.4.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "uv==0.9.14",
    "uvicorn==0.24.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "weasyprint==60.1",
    "webencodings==0.5.1",
    "websockets==15.0.1",
    "zopfli==0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
